# LearnOpenGLSandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
asset/shader/: 3.3.shader_class_frag.glsl  4.1.texture_vert.glsl
lesson/: CMakeLists.txt
lesson/1.2.hello_window/: main.cpp
lesson/1.3.hello_triangle/: main.cpp
lesson/2.1.hello_triangle/: main.cpp
lesson/3.1.shader_uniform/: main.cpp
lesson/3.2.shader_interpolation/: main.cpp
lesson/3.3.shader_class/: main.cpp
lesson/4.1.texture/: main.cpp
lesson/common/: app.cpp  app.hpp  shader.cpp  shader.hpp
